--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @font-face {
@@ -5,6 +6,7 @@ font-family: 'Android';
 src: url('../fontes/idroid.otf') format('opentype');
 font-weight: normal;
 }
+
 :root{
 --cor0:#c5ebd6;
 --cor1:#83e1ad;
@@ -17,14 +19,14 @@ font-weight: normal;
 --fonte-secundaria: 'Android', sans-serif;
 }
 *{
-    padding: 0;
+   
     margin: 0;
-    border: 0;
-    box-sizing: border-box;
+   
 }
 body{
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
+    position: relative;
 }
 header{
 margin-top: 1px;
@@ -34,6 +36,7 @@ padding: 5px;
 min-height: 150px; 
 }
 
+
 header h1{
     color: white;
     font-family: var(--fonte-destaque);
@@ -41,7 +44,7 @@ header h1{
     transition: color 1s;
     max-width: 700px;
     display: inline-block;
-    transition: 1s;
+    transition: 0.4s;
     text-shadow: 0px 0px 10px black;
 }
 header h1:hover{
@@ -61,7 +64,7 @@ header p{
     padding-left: 10px;
     padding-right: 10px;
     transition: 0.4s;
-    display: inline-block;
+    
 }
 header p:hover{
     transform: scale(1.03);
@@ -71,6 +74,8 @@ nav{
     text-align: right;
     border-radius: 0px 0px 15px 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
+    position: sticky;
+    top: 0;
     
 }
 nav a {
@@ -102,15 +107,20 @@ main{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.425);
     border-radius: 0px 0px 10px 10px;
 }
+main h1{
+    font-weight: normal;
+    font-size: 1.5em;
+}
 main h2{
     color: var(--cor3);
     font-family: var(--fonte-secundaria);
     font-size: 1.3em;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor2), transparent);
-    max-width: 80%;
+    max-width: 95%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
     padding: 5px;
-
+    
 }
 main img{
     width: 100%;
@@ -133,7 +143,7 @@ main p{
     font-weight: bold;
    
  }
- main a{
+ main a:link{
     color: var(--cor4);
     font-weight: bold;
     text-decoration: none;
@@ -144,6 +154,26 @@ main a:hover{
     text-decoration: underline;
     font-size: 18px;
 }
+main a:visited{
+    color: blueviolet;
+}
+
+/*=========Video===============*/
+div.video{
+    margin: 0 -14px 30px -14px;
+    background-color: var(--cor4);
+    padding: 20px;
+    padding-bottom: 56%;
+    position: relative;
+    border-radius: 20px;
+}
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
 a.externo::after{ 
     content: '\00A0\1F517';
 }
@@ -153,6 +183,10 @@ aside{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.281);
+    transition: 0.5s;
+}
+aside:hover{
+    transform: scale(1.03);
 }
 aside > ul{
     list-style-type: '\2714\00A0\00A0'; /*Não é compatível com todo navegador*/
